# async-app

./: .env.example  .gitignore  beam  pyproject.toml
app/: app.py
app/console/commands/: hello.py
app/http/controllers/: welcome.py
app/providers/: app_service_provider.py  route_service_provider.py
config/: app.py  encryption.py  static.py  view.py
resources/views/: welcome.html.jinja2
routes/: api.py  web.py
tests/: conftest.py
tests/console/commands/: test_hello.py
tests/controllers/: test_welcome.py
