[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
expanse = "^0.4.2"

[tool.poetry.group.test.dependencies]
pytest = ">=8.3.3"
pytest-asyncio = ">=0.24.0"


[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["asynchronous: Mark a test as asynchronous"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
